2008-04-14  Per Abrahamsen  <abraham@dina.kvl.dk>

	* chemical_std.C: Obey 'Mobsol::alpha'.
	* all: Don't pass 'dt' for solute source terms.

2008-04-08  Per Abrahamsen  <abraham@dina.kvl.dk>

	* movement_solute.C, movement_solute.h: New intermeditate model.

2008-04-02  Per Abrahamsen  <abraham@dina.kvl.dk>

	* geometry.C, geometry.h, geometry1d.C, geometry1d.h, geometry_rect.C
	* geometry_rect.h (edge_area, edge_area_per_length): Moved to Geometry.

	* treelog.C (Open::Open): Added new variant for entries in model
	lists.
	* gnuplot_multi.C (GnuplotMulti::initialize): Use it.
	(GnuplotMulti::plot): Ditto.
	* program_batch.C (struct ProgramBatch): Ditto.
	* program_gnuplot.C (ProgramGnuplot::run): Ditto.

	* geometry.h (Geometry::edge_area_per_length): New virtual member.

	* msoltranrect.h, msoltranrect.C, msoltranrect_none.C,
	* msoltranrect_convection.C: Use 'Geometry' instead of 'GeometryRect'.
	* msoltranrect_cd.C: Ditto, and cast to 'GeometryRect' internally.

2008-04-01  Per Abrahamsen  <abraham@dina.kvl.dk>

	* msoltranrect_convection.C (ddt): New log variable.
	(MsoltranrectConvection::flow): Small timesteps.

2008-03-31  Per Abrahamsen  <abraham@dina.kvl.dk>

	* msoltranrect_convection.C (MsoltranrectConvection::flow): 
	* msoltranrect_Mollerup.C (MsoltranrectMollerup::flow): 
	* msoltranrect_none.C (MsoltranrectNone::flow):
	All calculation on solute (C).
	* msoltranrect.C (Msoltranrect::solute, Msoltranrect::element): 
	Update callers.

2008-03-28  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Makefile (REMOVE, MODELS): Removed 'msoltranrect_2x1.C'. 

2008-03-27  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Makefile (OTHER): Added it.

	* frame.C, frame.h: New utility.

2008-03-26  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.29 released.

2008-03-26  Per Abrahamsen  <abraham@dina.kvl.dk>

	* all: Obey 'MaxRootingDepth'.

	* syntax.C, syntax.h (Syntax::order_index): Renamed from 'order'
	to avoid name conflict.