@@ -1,3 +1,9 @@
+2008-04-17  Per Abrahamsen  <abraham@dina.kvl.dk>
+
+	* mobsol.h, mobsol.C: Renamed component to 'secondary'.
+	* Makefile (COMPONENTS): Ditto.
+	* all: Updated callers.
+	
 2008-04-14  Per Abrahamsen  <abraham@dina.kvl.dk>
 
 	* chemical_std.C: Obey 'Mobsol::alpha'.
